# aws-spa-api-template

./: README.md
backend/: Makefile  README.md  docker-compose.dev.yml
backend/app/: .env.dev  Dockerfile.dev  database.py  main.py  pyproject.toml
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/db/: .env.dev  .gitignore
backend/db/mysql/: Dockerfile.dev
backend/db/mysql/init.d/: init.sql
