[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.5"
pydantic = "^1.8.1"
python-jose = "^3.2.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
